@@ -1,6 +1,6 @@
 package uk.gov.companieshouse.insolvency.delta.mapper;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import tools.jackson.databind.ObjectMapper;
 import java.io.IOException;
@@ -38,6 +38,7 @@ class InsolvencyMapperTest {
 
     private ObjectMapper mapper;
     private Insolvency insolvency;
+    private InternalCompanyInsolvency insolvencyTarget;
 
     @Autowired
     InsolvencyMapper insolvencyMapper;
@@ -46,7 +47,7 @@ class InsolvencyMapperTest {
     EncoderUtil encoderUtil;
 
     @BeforeEach
-    public void setUp() throws IOException {
+    void setUp() throws IOException {
         mapper = new ObjectMapper();
 
         String path = "insolvency-delta-complex.json";
@@ -54,48 +55,42 @@ class InsolvencyMapperTest {
                 FileCopyUtils.copyToString(new InputStreamReader(ClassLoader.getSystemClassLoader().getResourceAsStream(path)));
 
         final InsolvencyDelta insolvencyDelta = mapper.readValue(input, InsolvencyDelta.class);
-        insolvency = insolvencyDelta.getInsolvency().get(0);
+        insolvency = insolvencyDelta.getInsolvency().getFirst();
+
+        String companyNumber = insolvency.getCompanyNumber();
+        insolvencyTarget = insolvencyMapper.insolvencyDeltaToApi(insolvency, companyNumber);
     }
 
     @Test
-    void shouldMapInsolvencyToCompanyInsolvency() {
-        String companyNumber = insolvency.getCompanyNumber();
-        InternalCompanyInsolvency insolvencyTarget =
-                insolvencyMapper.insolvencyDeltaToApi(insolvency, companyNumber);
-
-        InternalData internalInsolvencyTarget = insolvencyTarget.getInternalData();
-        CompanyInsolvency externalInsolvencyTarget = insolvencyTarget.getExternalData();
+    void shouldMapInternalData() {
+        InternalData internalData = insolvencyTarget.getInternalData();
 
         // Nanosecond must be 9 digits and therefore padded with 000 at the end
         OffsetDateTime expectedDeltaAt = OffsetDateTime.of(2021, 10, 8, 15, 28, 23, 383176000, ZoneOffset.of("Z"));
 
-        assertThat(insolvency).isNotNull();
         assertThat(insolvencyTarget).isNotNull();
-        assertThat(internalInsolvencyTarget.getDeltaAt()).isEqualTo(expectedDeltaAt);
-        assertThat(externalInsolvencyTarget.getCases().size()).isEqualTo(4);
+        assertThat(internalData.getDeltaAt()).isEqualTo(expectedDeltaAt);
+    }
 
-        // FIRST CASE
-        ModelCase firstCase = externalInsolvencyTarget.getCases().get(0);
-        assertThat(firstCase.getNotes().size()).isEqualTo(1);
-        assertThat(firstCase.getNotes().get(0)).isEqualTo("scottish-insolvency-info");
+    @Test
+    void shouldMapFirstCase() {
+        CompanyInsolvency externalData = insolvencyTarget.getExternalData();
+        assertThat(externalData.getCases()).hasSize(4);
+
+        ModelCase firstCase = externalData.getCases().getFirst();
+        assertThat(firstCase.getNotes()).containsExactly("scottish-insolvency-info");
         assertThat(firstCase.getNumber()).isEqualTo("1");
         assertThat(firstCase.getType()).isEqualTo(ModelCase.TypeEnum.ADMINISTRATIVE_RECEIVER);
-        assertThat(firstCase.getPractitioners().size()).isEqualTo(2);
+        assertThat(firstCase.getPractitioners()).hasSize(2);
 
         // FIRST PRACTITIONER
-        Practitioners firstPractitioner = firstCase.getPractitioners().get(0);
+        Practitioners firstPractitioner = firstCase.getPractitioners().getFirst();
         assertThat(firstPractitioner.getName()).isEqualTo("Michael Horrocks");
         assertThat(firstPractitioner.getAppointedOn()).isEqualTo(LocalDate.of(2004, 11, 22));
         assertThat(firstPractitioner.getCeasedToActOn()).isEqualTo(LocalDate.of(2006, 5, 5));
         assertThat(firstPractitioner.getRole()).isEqualTo(Practitioners.RoleEnum.PRACTITIONER);
-
-        PractitionerAddress firstAddress = firstPractitioner.getAddress();
-        assertThat(firstAddress.getAddressLine1()).isEqualTo("Free From Gluten");
-        assertThat(firstAddress.getAddressLine2()).isEqualTo("101 Barbirolli Square");
-        assertThat(firstAddress.getLocality()).isEqualTo("Lower Mosley Street");
-        assertThat(firstAddress.getRegion()).isEqualTo("Manchester");
-        assertThat(firstAddress.getCountry()).isNull();
-        assertThat(firstAddress.getPostalCode()).isEqualTo("M2 3PW");
+        verifyAddress(firstPractitioner.getAddress(), "Free From Gluten", "101 Barbirolli Square",
+                "Lower Mosley Street", "Manchester", null, "M2 3PW");
 
         // SECOND PRACTITIONER
         Practitioners secondPractitioner = firstCase.getPractitioners().get(1);
@@ -103,64 +98,69 @@ class InsolvencyMapperTest {
         assertThat(secondPractitioner.getAppointedOn()).isEqualTo(LocalDate.of(2004, 11, 22));
         assertThat(secondPractitioner.getCeasedToActOn()).isEqualTo(LocalDate.of(2006, 5, 5));
         assertThat(secondPractitioner.getRole()).isEqualTo(Practitioners.RoleEnum.PRACTITIONER);
+        verifyAddress(secondPractitioner.getAddress(), "Free From Debt", "101 Barbirolli Square",
+                "Lower Mosley Street", "Liverpool", null, "L2 4PO");
 
-        PractitionerAddress secondAddress = secondPractitioner.getAddress();
-        assertThat(secondAddress.getAddressLine1()).isEqualTo("Free From Debt");
-        assertThat(secondAddress.getAddressLine2()).isEqualTo("101 Barbirolli Square");
-        assertThat(secondAddress.getLocality()).isEqualTo("Lower Mosley Street");
-        assertThat(secondAddress.getRegion()).isEqualTo("Liverpool");
-        assertThat(secondAddress.getCountry()).isNull();
-        assertThat(secondAddress.getPostalCode()).isEqualTo("L2 4PO");
-
-        assertThat(firstCase.getDates().size()).isEqualTo(1);
+        // DATES & LINKS
+        assertThat(firstCase.getDates()).hasSize(1);
         List<CaseDates> caseDates = firstCase.getDates();
-        assertThat(caseDates.get(0).getType()).isEqualTo(CaseDates.TypeEnum.INSTRUMENTED_ON);
-        assertThat(caseDates.get(0).getDate()).isEqualTo(LocalDate.of(2002, 12, 17));
+        assertThat(caseDates.getFirst().getType()).isEqualTo(CaseDates.TypeEnum.INSTRUMENTED_ON);
+        assertThat(caseDates.getFirst().getDate()).isEqualTo(LocalDate.of(2002, 12, 17));
 
         assertThat(firstCase.getLinks()).isNotNull();
         String expectedMortgageIdEncoded = "cQjCn3ZZwOYqiJoMSc5Tm1OhFsE";
+        String companyNumber = insolvency.getCompanyNumber();
         String expectedChargeLink = "/company/" + companyNumber
                 + "/charges/" + expectedMortgageIdEncoded;
         assertThat(firstCase.getLinks().getCharge()).isEqualTo(expectedChargeLink);
+    }
 
-        // SECOND CASE
-        ModelCase secondCase = externalInsolvencyTarget.getCases().get(1);
-        assertThat(secondCase.getNotes().size()).isEqualTo(1);
-        assertThat(secondCase.getNotes().get(0)).isEqualTo("scottish-insolvency-info");
+    @Test
+    void shouldMapSecondCase() {
+        CompanyInsolvency externalData = insolvencyTarget.getExternalData();
+        ModelCase secondCase = externalData.getCases().get(1);
+
+        assertThat(secondCase.getNotes()).containsExactly("scottish-insolvency-info");
         assertThat(secondCase.getNumber()).isEqualTo("2");
         assertThat(secondCase.getType()).isEqualTo(ModelCase.TypeEnum.CREDITORS_VOLUNTARY_LIQUIDATION);
-        assertThat(secondCase.getPractitioners().size()).isEqualTo(1);
+        assertThat(secondCase.getPractitioners()).hasSize(1);
 
-        Practitioners secondCasePractitioner = secondCase.getPractitioners().get(0);
+        Practitioners secondCasePractitioner = secondCase.getPractitioners().getFirst();
         assertThat(secondCasePractitioner.getName()).isEqualTo("Mark Terence Getliffe");
         assertThat(secondCasePractitioner.getAppointedOn()).isEqualTo(LocalDate.of(2005, 9, 29));
         assertThat(secondCasePractitioner.getRole()).isEqualTo(Practitioners.RoleEnum.RECEIVER);
+        verifyAddress(secondCasePractitioner.getAddress(), "78 Gluten Tag Road", null,
+                "Manchester", null, null, "M2 4WU");
 
-        PractitionerAddress secondCaseAddress = secondCasePractitioner.getAddress();
-        assertThat(secondCaseAddress.getAddressLine1()).isEqualTo("78 Gluten Tag Road");
-        assertThat(secondCaseAddress.getAddressLine2()).isNull();
-        assertThat(secondCaseAddress.getLocality()).isEqualTo("Manchester");
-        assertThat(secondCaseAddress.getRegion()).isNull();
-        assertThat(secondCaseAddress.getCountry()).isNull();
-        assertThat(secondCaseAddress.getPostalCode()).isEqualTo("M2 4WU");
-
-        assertThat(secondCase.getDates().size()).isEqualTo(2);
+        assertThat(secondCase.getDates()).hasSize(2);
         List<CaseDates> secondCaseDates = secondCase.getDates();
-        assertThat(secondCaseDates.get(0).getType()).isEqualTo(CaseDates.TypeEnum.WOUND_UP_ON);
-        assertThat(secondCaseDates.get(0).getDate()).isEqualTo(LocalDate.of(2005, 9, 29));
+        assertThat(secondCaseDates.getFirst().getType()).isEqualTo(CaseDates.TypeEnum.WOUND_UP_ON);
+        assertThat(secondCaseDates.getFirst().getDate()).isEqualTo(LocalDate.of(2005, 9, 29));
         assertThat(secondCaseDates.get(1).getType()).isEqualTo(CaseDates.TypeEnum.DISSOLVED_ON);
-        assertThat(secondCaseDates.get(1).getDate()).isEqualTo(LocalDate.of(2021, 10, 01));
+        assertThat(secondCaseDates.get(1).getDate()).isEqualTo(LocalDate.of(2021, 10, 1));
 
         assertThat(secondCase.getLinks()).isNull();
+    }
 
-        // THIRD CASE
-        ModelCase thirdCase = externalInsolvencyTarget.getCases().get(2);
+    @Test
+    void shouldMapThirdAndFourthCaseWithEmptyNotes() {
+        CompanyInsolvency externalData = insolvencyTarget.getExternalData();
+
+        ModelCase thirdCase = externalData.getCases().get(2);
         assertThat(thirdCase.getNotes()).isNull();
 
-        // FOURTH CASE
-        ModelCase fourthCase = externalInsolvencyTarget.getCases().get(3);
+        ModelCase fourthCase = externalData.getCases().get(3);
         assertThat(fourthCase.getNotes()).isNull();
+    }
 
+    private void verifyAddress(PractitionerAddress address, String line1, String line2,
+                               String locality, String region, String country, String postalCode) {
+        assertThat(address.getAddressLine1()).isEqualTo(line1);
+        assertThat(address.getAddressLine2()).isEqualTo(line2);
+        assertThat(address.getLocality()).isEqualTo(locality);
+        assertThat(address.getRegion()).isEqualTo(region);
+        assertThat(address.getCountry()).isEqualTo(country);
+        assertThat(address.getPostalCode()).isEqualTo(postalCode);
     }
 
 }
